--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 	<!-- Link to css files -->
-	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css">	 -->
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">	
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
 	
 	<!-- Link to jquery -->
@@ -19,11 +19,12 @@
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 	
 	<!-- Firebase JavaScript Link -->
-  	<!-- <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script> -->
   	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 </head>
 <body>
-	<div class="container">
+	<div class="main-content">
+		<div class="container">
+	</div>
 		
 	</div>
 
