--- a/index.html
+++ b/index.html
@@ -19,16 +19,24 @@
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 	
 	<!-- Firebase JavaScript Link -->
-  	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+
+	<style>
+		#map {
+			height: 400px;
+			width: 100%;
+		}
+	</style>
 </head>
 <body>
 	<div class="main-content">
-		<div class="container">
-	</div>
-		
-	</div>
+		<h3>My Google Maps Demo</h3>
+		<div id="map"></div>
+	</script>
+</div>
 
-	<!-- Link to javascript file -->
-	<script type='text/javascript' src="assets/javascript/bigFish.js"></script>
+<!-- Link to javascript file -->
+<script type='text/javascript' src="assets/javascript/bigFish.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3ltQRZXaHoqxDMgihF6523DnqkhA426Y&callback=initMap"></script>
 </body>
 </html>
