--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 	
 	<!-- Link to Bootstrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- Compiled and minified CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 
 	<!-- Link to css files -->
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">	
@@ -21,13 +22,24 @@
 	<!-- Firebase JavaScript Link -->
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 
+	<!-- Compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+
 </head>
 <body>
-	<div class="main-content">
-		<h3>My Google Maps Demo</h3>
-		<div id="map"></div>
-	</script>
-</div>
+	<div class="container">
+		<div class="main-content row">
+			<div class="col s12" id="map"></div>
+		</div>
+		<div class="info-content row">
+			<ul class="info col s12 collapsible" data-collapsible="accordion">
+				<li>
+					<div class="collapsible-header">Info</div>
+					<div class="collapsible-body">Stuff</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 
 <!-- Link to javascript file -->
 <script type='text/javascript' src="assets/javascript/bigFish.js"></script>
