fixed submit bug in login

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<form id="username-form">
 					Enter your fish's name<br>
 					<input type="text" name="username" id='record-name'><br>
-					<input type="button" value="Submit" id="submit-fish-name">
+					<input type="submit" value="Submit" id="submit-fish-name">
 				</form>
 			</div>
 		</div>
@@ -54,11 +54,7 @@
 				<li>
 					<div class="collapsible-header">Fish Info</div>
 					<div class="collapsible-body">
-						<form>
-							Fish Name<br>
-							<input type="text" id="player-name"><br>
-							<input type="button" value="Create Fish" id='create-fish'>
-						</form>
+						Test
 					</div>
 				</li>
 			</ul>
