Shows info of a fish pin in a table when you hover over that pin. Also, an alert appears when you click a pin.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
 	<div class="main-content">
 		<h3>My Google Maps Demo</h3>
 		<div id="map"></div>
+		<section>
+			<table>
+				<tr>
+					<th>Name: </th>
+					<td id="fish-pin-name"></td>
+				</tr>
+				<tr>
+					<th>Level: </th>
+					<td id="fish-pin-level"></td>
+				</tr>
+				<tr>
+					<th>Latitude: </th>
+					<td id="fish-pin-lat"></td>
+				</tr>
+				<tr>
+					<th>Longitude: </th>
+					<td id="fish-pin-lng"></td>
+				</tr>
+			</table>
+		</section>
 	</script>
 </div>
 
