Fixes 14, lets user skip login if they have a fish in local

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="info-content row">
 			<ul class="info col s12 collapsible" data-collapsible="accordion">
 				<li>
-					<div class="collapsible-header">Fish Info</div>
+					<div class="collapsible-header info-header">Fish Info</div>
 					<div class="collapsible-body">
 						<section>
 					        <table>
