--- a/index.html
+++ b/index.html
@@ -70,27 +70,60 @@
 				<li>
 					<div class="collapsible-header info-header">Fish Info</div>
 					<div class="collapsible-body">
-						<img id="player-fish" src="assets/images/fish-level-0.png">
-						<section>
-					        <table>
-					          <tr>
-					            <th>Name: </th>
-					            <td id="fish-pin-name"></td>
-					          </tr>
-					          <tr>
-					            <th>Level: </th>
-					            <td id="fish-pin-level"></td>
-					          </tr>
-					          <tr>
-					            <th>Latitude: </th>
-					            <td id="fish-pin-lat"></td>
-					          </tr>
-					          <tr>
-					            <th>Longitude: </th>
-					            <td id="fish-pin-lng"></td>
-					          </tr>
-					        </table>
-					      </section>
+						<div class="display-content row">
+							<div id="player-wrapper">
+								<div class="munch col s1">
+									<img id="munch" src="assets/images/munch.png">
+								</div>
+								<div class="player-pic col s2">
+									<img id="player-fish" src="assets/images/tuna1.png">
+								</div>
+								<div class="player-info col s2">
+									<section>
+								        <table class="striped">
+								          <tr>
+								            <th>Name: </th>
+								            <td id="player-pin-name"></td>
+								          </tr>
+								          <tr>
+								            <th>Level: </th>
+								            <td id="player-pin-level"></td>
+								          </tr>
+								          <tr>
+								            <th>Latitude: </th>
+								            <td id="player-pin-lat"></td>
+								          </tr>
+								          <tr>
+								            <th>Longitude: </th>
+								            <td id="player-pin-lng"></td>
+								          </tr>
+								        </table>
+								    </section>
+								</div>
+							</div>
+							<div class="fish-info col s2">
+								<section>
+							        <table>
+							          <tr>
+							            <th>Name: </th>
+							            <td id="fish-pin-name"></td>
+							          </tr>
+							          <tr>
+							            <th>Level: </th>
+							            <td id="fish-pin-level"></td>
+							          </tr>
+							          <tr>
+							            <th>Latitude: </th>
+							            <td id="fish-pin-lat"></td>
+							          </tr>
+							          <tr>
+							            <th>Longitude: </th>
+							            <td id="fish-pin-lng"></td>
+							          </tr>
+							        </table>
+							    </section>
+							</div>
+						</div>
 					</div>
 				</li>
 			</ul>
