--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="nav-wrapper header">
 				<a href="#" class="brand-logo title">Big Fish Little Fish</a>
 				<ul id="nav-mobile" class="right">
-					<li><a class="waves-effect waves-light btn" id="new-game">New Game</a></li>
+					<li><a class="waves-effect waves-light btn" id="new-game">New Fish</a></li>
 				</ul>
 			</div>
 		</nav>
