--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 	
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/png" href="assets/images/fish-level-0.png"/>
+	
 	<!-- Compiled and minified CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 
