reorganized some html and fixed images

--- a/index.html
+++ b/index.html
@@ -85,80 +85,83 @@
 					<div class="collapsible-header info-header">Information</div>
 					<div class="collapsible-body">
 						<div class="display-content row">
-							<div id="player-wrapper">
-								<!-- <div class="munch">
-									<img id="munch" src="assets/images/munch.png">
-								</div> -->
-								<div class="player-pic col s2">
-									<img id="munch" src="assets/images/munch.png">
-									<img id="player-fish" src="assets/images/tuna1.png">
-								</div>
-								<div class="col s2 offset-s4" id="player-info">
-									<section>
-								        <table id="player-stats">
-								          <tr>
-								            <th>Name: </th>
-								            <td id="player-pin-name"></td>
-								          </tr>
-								          <tr>
-								            <th>Level: </th>
-								            <td id="player-pin-level"></td>
-								          </tr>
-								          <tr>
-								            <th>Latitude: </th>
-								            <td id="player-pin-lat"></td>
-								          </tr>
-								          <tr>
-								            <th>Longitude: </th>
-								            <td id="player-pin-lng"></td>
-								          </tr>
-								        </table>
-								    </section>
+							<div class="player-wrapper col s6">
+								<div class="row">
+									<div class="player-pic col s4">
+										<img id="munch" src="assets/images/munch.png">
+										<img id="player-fish">
+									</div>
+									<div class="player-info col s8">
+										<section>
+									        <table id="player-stats">
+									          <tr>
+									            <th>Name: </th>
+									            <td id="player-pin-name"></td>
+									          </tr>
+									          <tr>
+									            <th>Level: </th>
+									            <td id="player-pin-level"></td>
+									          </tr>
+									          <tr>
+									            <th>Latitude: </th>
+									            <td id="player-pin-lat"></td>
+									          </tr>
+									          <tr>
+									            <th>Longitude: </th>
+									            <td id="player-pin-lng"></td>
+									          </tr>
+									        </table>
+									    </section>
+									</div>
 								</div>
 							</div>
-							<div class="fish-info col s2 offset-s4">
-								<section>
-							        <table>
-							          <tr>
-							            <th>Name: </th>
-							            <td id="fish-pin-name"></td>
-							          </tr>
-							          <tr>
-							            <th>Level: </th>
-							            <td id="fish-pin-level"></td>
-							          </tr>
-							          <tr>
-							            <th>Latitude: </th>
-							            <td id="fish-pin-lat"></td>
-							          </tr>
-							          <tr>
-							            <th>Longitude: </th>
-							            <td id="fish-pin-lng"></td>
-							          </tr>
-							        </table>
-							    </section>
-							</div>
-							<div class="weather-info col s4 offset-s2">
-								<section>
-							        <table>
-							          <tr>
-							            <th>Temperature(F): </th>
-							            <td id="temp"></td>
-							          </tr>
-							          <tr>
-							            <th>Sunrise: </th>
-							            <td id="sunrise"></td>
-							          </tr>
-							          <tr>
-							            <th>Sunset: </th>
-							            <td id="sunset"></td>
-							          </tr>
-							          <tr>
-							            <th>Weather: </th>
-							            <td id="weather-detail"></td>
-							          </tr>
-							        </table>
-							    </section>
+							<div class="info-wrapper col s6">
+								<div class="row">
+									<div class="col s4">
+										<section>
+									        <table>
+									          <tr>
+									            <th>Name: </th>
+									            <td id="fish-pin-name"></td>
+									          </tr>
+									          <tr>
+									            <th>Level: </th>
+									            <td id="fish-pin-level"></td>
+									          </tr>
+									          <tr>
+									            <th>Latitude: </th>
+									            <td id="fish-pin-lat"></td>
+									          </tr>
+									          <tr>
+									            <th>Longitude: </th>
+									            <td id="fish-pin-lng"></td>
+									          </tr>
+									        </table>
+									    </section>
+									</div>
+									<div class="col s4">
+										<section>
+									        <table>
+									          <tr>
+									            <th>Temperature(F): </th>
+									            <td id="temp"></td>
+									          </tr>
+									          <tr>
+									            <th>Sunrise: </th>
+									            <td id="sunrise"></td>
+									          </tr>
+									          <tr>
+									            <th>Sunset: </th>
+									            <td id="sunset"></td>
+									          </tr>
+									          <tr>
+									            <th>Weather: </th>
+									            <td id="weather-detail"></td>
+									          </tr>
+									        </table>
+									    </section>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
