added functional gameover modal

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
 				<a href="#!" id="new-fish" class="modal-action modal-close btn-flat">No</a>
 			</div>
 		</div>
+		<div id="gameover-modal" class="modal">
+			<div class="modal-content">
+				<h1>GAME OVER!</h1><br>
+				<h4 id='death-level'></h4>
+			</div>
+			<div class="modal-footer">
+				<a href="#!" id="start-over" class="modal-action modal-close btn-flat ">Start Over?</a>
+			</div>
+		</div>
 		<!-- Modal for user to find existing fish -->
 		<div id="username-modal" class="modal">
 			<div class="modal-content">
