--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<!-- Modal to ask if user has a fish or not -->
 		<div id="intro-modal" class="modal">
 			<div class="modal-content">
-				<h4>Do you have an existing fish?</h4>
+				<h4>Do you want to play as an existing fish? Click "No" to create a new one.</h4>
 			</div>
 			<div class="modal-footer">
 				<a href="#!" id="exist-fish" class="modal-action modal-close btn-flat ">Yes</a>
