Adjusted error message text for invalid fish key entry.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<input type="text" name="username" id='find-name'><br>
 					<input type="submit" value="Submit" id="find-fish-name">
 					<input type="submit" value="Back" id="back-btn">
-					<p id="invalid-key-login-message">That is an invalid key. Please try again, or create a new fish.</p>
+					<p id="invalid-key-login-message">That is an invalid key. Please try again, or create a new fish. If it used to be a valid key, then your fish was eaten.</p>
 				</form>
 			</div>
 		</div>
